--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 .swiftpm/xcode/package.xcworkspace/xcuserdata/markobenacic.xcuserdatad/UserInterfaceState.xcuserstate
+.swiftpm/xcode/package.xcworkspace/xcuserdata/markobenacic.xcuserdatad/UserInterfaceState.xcuserstate
